1.2.0 () -

- TS-29   tasksh hangs trying to read task from stdin
          (thanks to ilove zfs).

------ current release ---------------------------

1.1.0 (2016-09-06) 464f5ae19f853911e739c2489897aef64345c388

- TD-120  Missing cmakedefine for HAVE_GET_CURRENT_DIR_NAME
          (Thanks to Jörg Krause, Ben Boeckel).
- TW-1845 Cygwin build fails, missing get_current_dir_name
          (thanks to hosaka).
- TS-11   Autoclear in the Task Shell
          (thanks to Lars Kumbier).
- TS-24   add review option (m)odify
          (thanks to David Patrick).
- TS-28   Please add a (m)odify feature for review
          (thanks to Iain R. Learmonth).
- Implemented 'review' command.
- Implemented 'diag' command.
- Added 'review N' option, to specify the number of tasks you would like to
  review.
- Integrated libshared.git.

------ old releases ------------------------------

1.0.0 (2014-12-21) 5934dfcefac6d037a359bc733a8382e42e32552e

- TS-1    Apostrophe inside tasksh 'log' causes segmentation fault
          (thanks to David Stahl).
- TS-2    tasksh segfaults if quotes not closed
          (thanks to Fidel Mato).
- TS-5    tasksh segfaults
          (thanks to David Patrick).
- TS-13   Quotes included when using task shell
          (thanks to Kevin Gunn).
- libreadline support added for line editing and command history.

------ start -----------------------------------

Project started 2014-06-08
