@@ -21,3 +21,4 @@ suggestions:
   hosaka
   Lars Kumbier
   Iain R. Learmonth
+  Eric Hymowitz
