@@ -1,7 +1,7 @@
 
 New Features in tasksh 1.2.0
 
-  - 
+  - Responds to Ctrl-D by exiting.
 
 New commands in tasksh 1.2.0
 
